--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,8 +11,10 @@ execute_process(
   COMMAND cmake -P Setup.cmake
 )
 add_executable(modulizer Base.cc ArgProcessor.cc FileOp.cc Merger.cc Exporter.cc Modularizer.cc Main.cc)
+target_compile_features(modulizer PUBLIC cxx_std_23)
 add_subdirectory(../3rdParty/fmt "${CMAKE_BINARY_DIR}/fmt")
 target_link_libraries(modulizer fmt::fmt)
+
 
 
  
