Fix precompiled header

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,16 +12,17 @@ execute_process(
   COMMAND cmake -P Setup.cmake
 )
 
-set(files Base.cc Regex.cc ArgProcessor.cc FileOp.cc Merger.cc Exporter.cc Modularizer.cc)
-add_executable(modulizer ${files} Main.cc) 
+add_executable(modulizer Base.cc Regex.cc ArgProcessor.cc FileOp.cc Merger.cc Exporter.cc Modularizer.cc Main.cc) 
 target_compile_features(modulizer PUBLIC cxx_std_23)
 target_compile_options(modulizer PUBLIC -Wno-deprecated-literal-operator)
 
+# 3rd-party headers rarely changes
 set(3rdPartyHeaders Generator.hpp toml++/include/toml++/toml.hpp fmt/include/fmt/format.h)
-list(TRANSFORM 3rdPartyHeaders PREPEND "../3rdParty/") 
-list(TRANSFORM files REPLACE "cc" "hpp")
+list(TRANSFORM 3rdPartyHeaders PREPEND "../3rdParty/")
 
-foreach(header IN LISTS files 3rdPartyHeaders)
+# Project headers that should not be changed frequently
+set(stableHeaders Base.hpp)
+foreach(header IN LISTS 3rdPartyHeaders stableHeaders)
   target_precompile_headers(modulizer PUBLIC ${header})
 endforeach()
 
@@ -30,6 +31,8 @@ set(BUILD_SHARED_LIBS on)
 add_subdirectory(../3rdParty/fmt "${CMAKE_BINARY_DIR}/fmt")
 target_link_libraries(modulizer fmt::fmt)
 
+target_compile_definitions(modulizer PUBLIC TOML_EXCEPTIONS=0)
+target_compile_definitions(modulizer PUBLIC TOML_ENABLE_FORMATTERS=0)
 add_subdirectory(../3rdParty/toml++ "${CMAKE_BINARY_DIR}/toml++")
 target_link_libraries(modulizer tomlplusplus::tomlplusplus)
 
