Inserting exports into string

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,8 @@ execute_process(
   COMMAND cmake -P Setup.cmake
 )
 
-add_executable(modulizer Base.cc Regex.cc ArgProcessor.cc FileOp.cc Exporter.cc Modularizer.cc Main.cc) 
+add_executable(modulizer Base.cc Regex.cc ArgProcessor.cc FileOp.cc Exporter.cc 
+  Modularizer.cc Main.cc) 
 target_compile_features(modulizer PUBLIC cxx_std_23)
 target_compile_options(modulizer PUBLIC -Wno-deprecated-literal-operator)
 
@@ -28,7 +29,8 @@ endforeach()
 
 # For some reason dumb reasons, PCRE2 setting a cached BUILD_SHARED_LIBS like so:
 # SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libraries.")
-# will override my set(BUILD_SHARED_LIBS on) when building the first time because normal variables should override cached ones. In this case, it just doesn't work???
+# will override my set(BUILD_SHARED_LIBS on) when building the first time because normal
+# variables should override cached ones. In this case, it just doesn't work???
 set(BUILD_SHARED_LIBS on CACHE BOOL "Build shared libraries.")
 
 add_subdirectory(../3rdParty/fmt "${CMAKE_BINARY_DIR}/fmt")
@@ -44,7 +46,8 @@ set(PCRE2_BUILD_PCRE2GREP off)
 set(BUILD_STATIC_LIBS off)
 set(PCRE2_SUPPORT_JIT on CACHE BOOL "PCRE2 JIT")
 
-# Another fix for PCRE2, it uses option() for default values with CMAKE < 3.12, so it just override my variables above
+# Another fix for PCRE2, it uses option() for default values with CMAKE < 3.12, so it just
+# override my variables above
 set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 add_subdirectory(../3rdParty/pcre2 "${CMAKE_BINARY_DIR}/pcre2")
 target_link_libraries(modulizer pcre2-8)
